# ar4mod

ar_description/urdf/: ar.ros2_control.xacro  ar.urdf.xacro  ar_macro.xacro
ar_hardware_interface/config/joint_offsets/: ar4.yaml
ar_moveit_config/launch/: demo.launch.py
ar_moveit_config/srdf/: ar.srdf.xacro
note/: power_fix.txt
src/ar_description/: CMakeLists.txt
src/ar_description/config/: ar4.yaml
src/ar_description/urdf/: ar.urdf  ar.urdf.xacro  ar_gazebo.urdf.xacro  ar_macro.xacro
src/ar_gazebo/launch/: ar_gazebo.launch.py
src/ar_hardware_interface/: CMakeLists.txt  package.xml
src/ar_hardware_interface/config/: controllers.yaml
src/ar_hardware_interface/launch/: ar_hardware.launch.py
src/ar_hardware_interface/src/: ar_hardware_interface.cpp
src/ar_hardware_interface/urdf/: ar.urdf.xacro
src/ar_moveit_config/config/: controllers.yaml  kinematics.yaml  servo_config.yaml
src/ar_moveit_config/launch/: ar_moveit.launch.py
src/ar_moveit_config/urdf/: fake_ar.urdf.xacro
src/debugger/: CMakeLists.txt  package.xml
src/debugger/src/: controller_debug.cpp  test_ftxui.cpp
src/man_control/: CMakeLists.txt  package.xml
src/man_control/config/: ar_servo_config.yaml
src/man_control/src/: servo_keyboard.cpp  teleop.cpp
teensy/AR4_MK2/: AR4_MK2.ino
